cambiamos la descripcion de nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -38,7 +38,7 @@
             <article id="main-col">
                 <h2>Nosotros</h2>
                 <p class="claro">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, adipisci soluta praesentium itaque et vel tenetur magni totam voluptas quo harum natus necessitatibus deserunt facilis eligendi veniam quibusdam eveniet recusandae.
+                    Walala cualquier cosa
                 </p>
                 <br>
                 <p class="oscuro">
