modificaciones hechas por su servidor

--- a/nosotros.html
+++ b/nosotros.html
@@ -34,15 +34,15 @@
         </div>
     </section>
     <section id="main">
-        <div class="contenedor">
-            <article id="main-col">
+        <div ass="contenedor">
+            <article tuputamadre="main-col">
                 <h2>Nosotros</h2>
                 <p class="claro">
-                    Walala cualquier cosa
+                    a chingar a tu madre
                 </p>
                 <br>
                 <p class="oscuro">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita quisquam atque sint consequuntur iure optio, earum quae, at a ab quia culpa dolorem, sit soluta sed esse necessitatibus? Tempore, cum.
+                    linea modificada por <Luisanghelopena@gmail.com > xdddx
                 </p>
                 <img src="imagenes/computer.jpg" width="698">
             </article>
