--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li class="actual"><a href="index.html">Inicio</a></li>
                     <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="servicios.html">Servicios</a></li>
+                    <li><a href="servicios.html">LOl</a></li>
                     <li><a href="contacto.html">Contactos</a></li>
                 </ul>
             </nav>
